scss: Fix alignment bug with card module

--- a/scss/modules/card.scss
+++ b/scss/modules/card.scss
@@ -11,7 +11,6 @@
 		height: 150px;
 		position: relative;
 		text-align: center;
-		bottom: 15px;
 
 		.header-title {
 			color: white;
